[FIX] web: remove flicker with the avatar widget
Previously, the space between a field with the avatar widget and the
field underneath changed depending on whether a user is set or not which
creates a small flicker.

After this commit there will be no flicker when a user is set on an
avatar field.

Steps to reproduce:
- Install Project app
- With the vertical dots button, open a project's settings (form view)
- Set/Unset the "Project Manager"
=> a small vertical flicker with the underneath field
- Open one of the project's tasks
- Eventually, add a field under "Assignees" if none is present
- Set/Unset the "Assignees"
=> a small vertical flicker with the underneath field

task-3996557

closes odoo/odoo#186383

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -647,6 +647,14 @@
                 }
             }
         }
+
+        &.o_field_many2one_avatar .o_m2o_avatar > img {
+            display: block;
+        }
+
+        &.o_field_many2many_tags_avatar {
+            --fieldWidget-display: inline;
+        }
     }
     .o_field_widget, .btn {
         .o_field_widget {
